home-page-final

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.menu-card{
+    @apply flex flex-col justify-center items-center bg-white h-screen font-mono py-40;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.center-content {
+   @apply flex flex-col justify-center
+   items-center;
 }
+
+.btn {
+    @apply p-8 bg-sky-500 
+    rounded-full hover:bg-indigo-300
+    transition duration-300 ease-in-out flex items-center
+    animate-bounce;
+}
+.btn1 {
+    @apply p-4 bg-red-600 
+    rounded-full hover:bg-indigo-300
+    transition duration-300 ease-in-out flex items-center
+    animate-bounce;
+}
+.btn2 {
+    @apply p-4 bg-slate-400
+    rounded-full hover:bg-indigo-300
+    transition duration-300 ease-in-out flex items-center
+    animate-bounce;
+}
+.btn3 {
+    @apply p-4 mt-7 bg-green-600 
+    rounded-full hover:bg-indigo-300
+    transition duration-300 ease-in-out flex items-center
+    animate-bounce;
+}
+
